welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:11: error: not found: value baiseBrosse
	baiseBrosse()
        ^PictureMono:16: error: not found: value baiseBrosse
	baiseBrosse()
        ^