welcome.lessons.welcome.methods.picture.PictureMono.scala.code
override def run() {
def faireV() {
	avance()
	baisseBrosse()
	leveBrosse()
	gauche()
	avance()
	droite()
	avance()
	baiseBrosse()
	leveBrosse()
	avance()
	droite()
	avance()
	baiseBrosse()
	leveBrosse()
	gauche()
	avance()
	gauche()
}

for (n <-1 to 4) {
	faireV()
}
}
